styles.css
html, body{
    margin: 0;
    font-family: 'Open Sans', Arial, sans-serif;
    background-color: #003366;
    color: #fff;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    overflow-x: hidden;
}

.header {
    background-color: #002244;
    padding: 1rem 0;
    text-align: center;
    width: 100vw;
    min-width: 320px;
    margin-left: 0;
    margin-right: 0;
    box-sizing: border-box;
    
}

.nav-links {
    list-style-type: none;
    padding: 0;
    display: flex;
    justify-content: center;
    margin: 0;
    width: 100%;
    max-width: 100vw;
    box-sizing: border-box;
    flex-wrap: wrap;
    overflow: hidden;
}

.nav-links li {
    margin: 0 20px;
    position: relative;
}

.nav-links a {
    color: #fff;
    text-decoration: none;
    font-weight: bold;
    padding: 0.5rem 0.5rem;
    border-radius: 8px;
    transition: all 0.3s ease;
    margin: 3px;
    font-size: 1rem;
    position: relative;
}

.nav-links a.active {
    background-color: #fff;
    color: #002244;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    font-weight: bold;
}

.nav-links a:hover {
    background-color: #fff;
    color: #002244;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.content-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    padding: 20px;
    text-align: center;
    max-width: 1200px;
    margin: 0 auto;
}

.about-section {
    text-align: left;
    max-width: 800px;
    margin-right: 50px;
    font-size: 1.4rem;
}

.image-section img {
    max-width: 300px;
    height: auto;
    border-radius: 50%;
}

.button-container {
    margin-top: 20px;
}

.btn {
    display: inline-block;
    padding: 10px 10px;
    background-color: #002244;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    transition: all 0.3s ease;
    font-size: 1rem;
}

.btn:hover {
    background-color: #fff;
    color: #002244;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.resume-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 89vh;
    width: 100%;
    padding: 0px;
    box-sizing: border-box;
}

.resume-container iframe {
    position: absolute;
    border: none;
    width: 100%;
    max-width: 80%;
    height: 100vh;
    max-height: 80vh;
    object-fit: cover;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.fade-in {
    animation: fadeIn 1s ease-in-out;
}

.experiences-container {
    display: grid;
    grid-template-columns: repeat(2, minmax(200px, 1fr));
    grid-template-rows: repeat(2, auto);
    gap: 30px;
    padding: 30px;
    width: 90%;
    height: 88vh;
    box-sizing: border-box;
    margin: 0 auto;
}

.experience-item {
    background-color: #002244;
    color: white;
    border-radius: 20px;
    padding: 2rem;
    transition: transform 0.3s ease;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
}

.experience-item a {
    text-decoration: underline;
}

.experience-item:hover {
    transform: scale(1.05);
}

.experience-title {
    color: #fff;
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: bold;
    margin-bottom: 10px;
}

.experience-title:hover {
    text-decoration: underline;
}

.experience-description {
    font-size: 1rem;
}

.projects-container {
    display: grid;
    grid-template-columns: repeat(2, minmax(200px, 1fr));
    grid-template-rows: repeat(2, auto);
    gap: 30px;
    padding: 30px;
    width: 90%;
    height: 88vh;
    box-sizing: border-box;
    margin: 0 auto;
}

.project-item {
    background-color: #002244;
    color: white;
    border-radius: 20px;
    padding: 2rem;
    transition: transform 0.3s ease;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
}

.project-item a {
    text-decoration: underline;
}

.project-item:hover {
    transform: scale(1.05);
}

.project-title {
    color: #fff;
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: bold;
    margin-bottom: 10px;
}

.project-title:hover {
    text-decoration: underline;
}

.project-description {
    font-size: 1rem;
}

.resume-img {
    display: none;
}

@media (max-width: 768px) {
    .experiences-container {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
        overflow: hidden;
        overflow-y: auto;
    }
    .projects-container {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
        overflow: hidden;
        overflow-y: auto;
    }
    .content-container {
        flex-direction: column;
        padding: 10px;
    }

    .about-section {
        font-size: 1.2rem;
        margin: 0;
        text-align: center;
    }

    .image-section img {
        max-width: 200px;
        width: 100%;
        margin: 0 auto;
        margin-top: 20px;
    }

    .resume-container {
        margin: 0;
        padding: 0;
        overflow: hidden;
    }

    .resume-container iframe {
        display: none;
    }

    .resume-img {
        display: block;
        width: 90%;
        margin: 0;
        height: auto;
        padding: 0;
    }
}

@media (max-width: 480px) {
    .experiences-container {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(2, 1fr);
        overflow: hidden;
        overflow-y: auto;
    }
    .projects-container {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(4, 1fr);
        overflow: hidden;
        overflow-y: auto;
    }
    .nav-links li {
        margin: 0 10px;
    }

    .nav-links a {
        font-size: 0.9rem;
    }
    .about-section {
        font-size: 1rem;
    }

    .image-section img {
        margin-top: 20px;
        max-width: 150px;
    }

    .resume-container {
        margin: 0;
        padding: 0;
        overflow: hidden;
    }

    .resume-container iframe {
        display: none;
    }

    .resume-img {
        display: block;
        width: 90%;
        margin: 0;
        height: auto;
        padding: 0;
    }
}

